[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockeroo-mock-responses"
version = "0.4.0"
description = "Sarcastic HTTP status code responses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/mockeroo/mock-responses"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/mockeroo_mock_responses"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
