[package]
name = "mockeroo-mock-responses"
version = "0.3.0"
edition = "2021"
description = "Sarcastic HTTP status code responses"
license = "MIT"
repository = "https://github.com/mockeroo/mock-responses"
readme = "README.md"
build = "build.rs"
include = ["src/**", "build.rs", "responses/**"]

[dependencies]
rand = "0.8"

[build-dependencies]
serde_json = "1"
